<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter Search Query</string>
    <string name="search">SEARCH</string>
    <string name="beginDate_string">Begin Date</string>
    <string name="sortOrder_string">Sort Order</string>
    <string name="newsDeskValues_label">News Desk Values</string>
    <string name="arts_string">Arts</string>
    <string name="fashionAndStyle_string"><![CDATA[Fashion & Style]]></string>
    <string name="sports_string">Sports</string>

    <string-array name="SortOrderItems">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>

</resources>
